tasky-main/iac/kube-deployments/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
  namespace: tasky
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: tasky
